feat(prisma): openAPI restructured into a single source
